tests/NormalTests/paczka1/fuzzy1/76628112.err
Error in line 1: A248 A817 84,6
Error in line 7: bLz2 A430 19,4
Error in line 2: KHDin S828 45,4
Error in line 26: O90heM A430 85,6
Error in line 15: bLz2 A248 52,8
Error in line 27: M6VCT A248 33,9
Error in line 25: A248 S828 34,1
Error in line 31: bLz2 A430 81,7
